@@ -1077,7 +1077,7 @@ if [ "$DEBUGGING" = debug ] ; then
   fi
   XCFLAGS=$XCFLAGS' -DDEBUG_OS_ERROR -DDEBUG_SPVW -DSAFETY=3'
   case "$CC" in
-    *"g++"* ) XCFLAGS=$XCFLAGS' -DDEBUG_GCSAFETY -DNO_TYPECODES'; ;;
+    *"g++"* ) XCFLAGS=$XCFLAGS' -DDEBUG_GCSAFETY -DHEAPCODES'; ;;
   esac
 fi
 
