@@ -1,3 +1,11 @@
+2004-05-18  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d: Rename NO_TYPECODES to HEAPCODES.
+	* spvw.d: Likewise.
+	* encoding.d: Likewise.
+	* genclisph.d: Likewise.
+	* makemake.in: Likewise.
+
 2004-05-22  Bruno Haible  <bruno@clisp.org>
 
 	* configure.in (AC_INIT): Release 2.33.1.
